--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,6 +147,7 @@ jobs:
           dockerRunArgs: |
             --volume "${PWD}:/app"
           install: |
+            apt-get update
             apt-get install -y curl
             curl -fsSL https://deb.nodesource.com/setup_14.x | bash -
             apt-get install -y nodejs
