--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,6 +147,7 @@ jobs:
             apt-get install -y curl
             curl -fsSL https://deb.nodesource.com/setup_14.x | bash -
             apt-get install -y nodejs
+            npm install --global yarn
           run: |
             yarn install --immutable
             yarn build
