--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,28 +133,31 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: uraimo/run-on-arch-action@v2
-        name: Build and run on arm64
+      - name: Install node
+        uses: actions/setup-node@v1
         with:
-          arch: aarch64
-          distro: ubuntu20.04
-          env: |
-            IS_ARM64: "true"
-          dockerRunArgs: |
-            --volume "${PWD}:/app"
-          install: |
-            apt-get update
-            apt-get install -y curl
-            curl -fsSL https://deb.nodesource.com/setup_14.x | bash -
-            apt-get install -y nodejs
-            npm install --global yarn
-          run: |
-            yarn install --immutable
-            yarn build
-            yarn dist-standalone -t node14-linux-arm64 -o datadog-ci_linux-arm64
-            rm -rf dist
-            rm -rf src
-            yarn dist-standalone:test
+          node-version: '14.18.3'
+      - name: Install QEMU
+        run: sudo apt install qemu binfmt-support qemu-user-static && update-binfmts --display
+      - name: Install project dependencies
+        run: yarn install --immutable
+      - name: Bundle library
+        run: yarn build
+      - name: Create standalone binary
+        run: yarn dist-standalone -t node14-linux-arm64 -o datadog-ci_linux-arm64
+      - name: Upload datadog-ci tool
+        uses: actions/upload-artifact@v3
+        with:
+          name: datadog-ci_linux-arm64
+          path: ./datadog-ci_linux-arm64
+      - name: Remove dist folder to check that binary can stand alone
+        run: |
+          rm -rf dist
+          rm -rf src
+      - name: Test generated standalone binary
+        run: yarn dist-standalone:test
+        env: 
+          IS_ARM64: "true"
 
   check-licenses:
     name: Check licenses
