--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
           apk add nodejs npm
           yarn install --immutable
           yarn build
-          yarn dist-standalone -t node14-alpine-arm64 -o datadog-ci_linux-musl-x64
+          yarn dist-standalone -t node14-alpine-x64 -o datadog-ci_linux-musl-x64
           rm -rf dist
           rm -rf src
           yarn dist-standalone:test
