[github] update codeowners teams

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,17 +1,43 @@
 * @DataDog/datadog-ci
 
-src/commands
-src/commands/synthetics @DataDog/synthetics-worker
-src/commands/lambda @DataDog/serverless
-src/commands/sourcemaps @DataDog/source-code-integration
-src/commands/git-metadata @DataDog/source-code-integration
-*.md @DataDog/documentation
-src/commands/junit @DataDog/ci-app-tracers
-src/commands/dsyms @DataDog/rum-mobile
-src/helpers/ci.ts @DataDog/ci-app-tracers
-src/helpers/git.ts @DataDog/ci-app-tracers
-src/helpers/user-provided-git.ts @DataDog/ci-app-tracers
-src/helpers/__tests__/ci-env @DataDog/ci-app-tracers
-src/helpers/__tests__/ci.test.ts @DataDog/ci-app-tracers
-src/helpers/__tests__/git.test.ts @DataDog/ci-app-tracers
-src/helpers/__tests__/user-provided-git.test.ts @DataDog/ci-app-tracers
+
+# Commands
+
+## CI Visibility
+src/commands/junit   @DataDog/ci-app-libraries
+src/commands/metric  @DataDog/ci-app-libraries
+src/commands/tag     @DataDog/ci-app-libraries
+src/commands/trace   @DataDog/ci-app-libraries
+
+## RUM
+src/commands/dsyms         @DataDog/rum-mobile
+src/commands/react-native  @DataDog/rum-mobile
+
+## Serverless
+src/commands/lambda  @DataDog/serverless
+
+## Source Code Integration
+src/commands/git-metadata  @DataDog/source-code-integration
+src/commands/sourcemaps    @DataDog/source-code-integration
+
+## Synthetics
+src/commands/synthetics  @DataDog/synthetics-worker
+
+
+# Shared utilities
+
+## Git
+src/helpers/git  @DataDog/ci-app-libraries @DataDog/source-code-integration
+
+## CI
+src/helpers/ci.ts                                @DataDog/ci-app-libraries @Datadog/synthetics-worker
+src/helpers/tags.ts                              @DataDog/ci-app-libraries @Datadog/synthetics-worker
+src/helpers/user-provided-git.ts                 @DataDog/ci-app-libraries @Datadog/synthetics-worker
+src/helpers/**tests**/ci-env                     @DataDog/ci-app-libraries @Datadog/synthetics-worker
+src/helpers/**tests**/ci.test.ts                 @DataDog/ci-app-libraries @Datadog/synthetics-worker
+src/helpers/**tests**/tags.test.ts               @DataDog/ci-app-libraries @Datadog/synthetics-worker
+src/helpers/**tests**/user-provided-git.test.ts  @DataDog/ci-app-libraries @Datadog/synthetics-worker
+
+
+# Documentation
+*.md  @DataDog/documentation
