--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "glob": "7.1.4",
     "inquirer": "8.2.0",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
+    "js-yaml": "3.13.1",
     "proxy-agent": "5.0.0",
     "rimraf": "^3.0.2",
     "simple-git": "3.5.0",
@@ -86,6 +87,7 @@
     "@types/glob": "7.1.1",
     "@types/inquirer": "8.1.3",
     "@types/jest": "24.0.15",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "10.17.57",
     "@types/rimraf": "^3.0.2",
     "@types/ssh2": "0.5.46",
