--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "jest": "27.0.5",
     "jest-environment-node": "27.0.5",
     "jest-matcher-specific-error": "1.0.0",
+    "nock": "^13.2.9",
     "pkg": "5.5.2",
     "prettier": "2.0.5",
     "proxy": "1.0.2",
