--- a/src/commands/flutter-symbols/__tests__/fixtures/pubspecs/buildPubspec.yaml
+++ b/src/commands/flutter-symbols/__tests__/fixtures/pubspecs/buildPubspec.yaml
@@ -1,10 +1,9 @@
-name: invalid_pubspec_example
-description: A pubspec that has invalid yaml (sdk line doesn't close it's string)
-version: 1.2.3-test1
-
+name: valid_pubspec_example
+description: A pubspec that's valid
+version: 1.2.3+144
 
 environment:
-  sdk: ">=2.17.0-0 <3.0.0
+  sdk: ">=2.17.0-0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
