--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "dependencies": {
     "@types/datadog-metrics": "0.6.1",
     "async-retry": "1.3.1",
-    "aws-sdk": "2.1012.0",
+    "aws-sdk": "^2.1012.0",
     "axios": "0.21.4",
     "chalk": "3.0.0",
     "clipanion": "2.2.2",
