--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "js-yaml": "3.13.1",
     "proxy-agent": "5.0.0",
     "rimraf": "^3.0.2",
+    "semver": "^7.3.7",
     "simple-git": "3.5.0",
     "ssh2": "1.9.0",
     "ssh2-streams": "0.4.10",
