--- a/.github/workflows/ci-visibility-itr.yml
+++ b/.github/workflows/ci-visibility-itr.yml
@@ -32,6 +32,7 @@ jobs:
           node-version: '16'
       - run: yarn install --ignore-engines
       - run: yarn add --dev https://github.com/DataDog/dd-trace-js/tarball/master
+      - run: yarn build
       - run: yarn test:ci-vis:itr
         continue-on-error: true
         env:
