--- a/.github/workflows/ci-visibility-itr.yml
+++ b/.github/workflows/ci-visibility-itr.yml
@@ -1,5 +1,6 @@
 # This workflow is used to dogfood CI Visibility's Intelligent Test Runner
-# It is *not* intended to block merges or releases.
+# It is *not* intended to block merges or releases, so steps are marked
+# to continue-on-error
 
 name: CI Visibility ITR
 
@@ -31,8 +32,9 @@ jobs:
         with:
           node-version: '16'
       - run: yarn install --ignore-engines
+        continue-on-error: true
       - run: yarn add --dev https://github.com/DataDog/dd-trace-js/tarball/master
-      - run: yarn build
+        continue-on-error: true
       - run: yarn test:ci-vis:itr
         continue-on-error: true
         env:
