Remove sources content from RN source maps

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ dist
 
 # VSC files
 .vscode
+
+# Test generated files
+src/commands/react-native/__tests__/fixtures/with-sources-content/main.jsbundle.map.no-sources-content
