--- a/package.json
+++ b/package.json
@@ -38,17 +38,17 @@
     "clean": "rm -rf dist/*",
     "dist-standalone": "pkg --compress GZip .",
     "dist-standalone:test": "jest --config ./jest.config-standalone.js",
-    "format": "yarn tslint --fix && yarn prettier --write",
+    "format": "yarn eslint --fix",
     "launch": "ts-node --transpile-only src/cli.ts",
     "launch:debug": "node -r ts-node/register/transpile-only --inspect-brk src/cli.ts",
-    "lint": "(yarn tslint && yarn prettier --check) || (echo \"\nYou can fix this by running ==> yarn format <==\n\" && false)",
+    "lint": "yarn eslint || (echo \"\nYou can fix this by running ==> yarn format <==\n\" && false)",
     "no-only-in-tests": "grep -R \"\\.only[(\\.]\" $(find src -name '*.ts' | grep '__tests__'); test $? -eq 1 || (echo '.only was found in the tests, please remove it.' && false)",
     "prepack": "yarn build && node ./bin/make-it-executable.js",
     "prettier": "prettier \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore",
     "test": "jest --colors",
     "test:debug": "node --inspect-brk `which jest` --runInBand",
     "test:ci-vis:itr": "jest --colors --config ./jest.config-ci-vis-itr.js --passWithNoTests",
-    "tslint": "tslint -p tsconfig.json -c tslint.json",
+    "eslint": "eslint 'src/**/*.ts'",
     "typecheck": "bash bin/typecheck.sh",
     "watch": "tsc -w"
   },
@@ -82,7 +82,7 @@
     "yamux-js": "0.1.1"
   },
   "devDependencies": {
-    "@babel/core": "7.4.5",
+    "@babel/core": "7.8.0",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-typescript": "7.3.3",
     "@types/async-retry": "1.4.2",
@@ -100,7 +100,15 @@
     "@types/tiny-async-pool": "1.0.0",
     "@types/ws": "7.2.9",
     "@types/xml2js": "0.4.9",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "dd-trace": "0.36.6",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "2.7.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "4.0.0",
     "jest": "27.0.5",
     "jest-environment-node": "27.0.5",
     "jest-matcher-specific-error": "1.0.0",
@@ -109,9 +117,6 @@
     "proxy": "1.0.2",
     "ts-jest": "27.0.3",
     "ts-node": "8.8.1",
-    "tslint": "6.1.1",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-lines-between-class-members": "1.3.6",
     "typescript": "4.2.2"
   }
 }
