--- a/.github/workflows/ci-visibility-itr.yml
+++ b/.github/workflows/ci-visibility-itr.yml
@@ -8,8 +8,12 @@ on: push
 
 jobs:
   build-and-test:
+    strategy:
+      matrix:
+        version: [14, 16, 18]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     name: Build and test with ITR
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     env:
       DD_SERVICE: datadog-ci-tests-itr
       DD_CIVISIBILITY_AGENTLESS_ENABLED: 1
@@ -26,10 +30,8 @@ jobs:
       - name: Install node
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
-      - run: yarn install --ignore-engines
-        continue-on-error: true
-      - run: yarn add --dev https://github.com/DataDog/dd-trace-js/tarball/master
+          node-version: ${{ matrix.version }}
+      - run: yarn install --immutable
         continue-on-error: true
       - run: yarn test:ci-vis:itr
         continue-on-error: true
