--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,9 @@ jobs:
       fail-fast: false
       matrix:
         version: [14, 16, 18]
-        os: [ubuntu-latest, macos-latest, windows-latest]
 
     name: Build and test
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -23,11 +22,8 @@ jobs:
           node-version: ${{ matrix.version }}
       - run: yarn install --immutable
       - run: yarn build
-      - run: |
-          yarn build
-          yarn lint
-          yarn no-only-in-tests
-        if: ${{ matrix.os == 'ubuntu-latest' }}
+      - run: yarn lint
+      - run: yarn no-only-in-tests
       - run: yarn test
         env:
           CI: true
@@ -37,7 +33,7 @@ jobs:
           DD_ENV: ci
           NODE_OPTIONS: -r dd-trace/ci/init
       - run: mkdir artifacts
-      - run: yarn pack --filename artifacts/datadog-ci-${{ matrix.os }}-${{ matrix.version }}.tgz
+      - run: yarn pack --filename artifacts/datadog-ci-${{ matrix.version }}.tgz
       - run: cp -r .github/workflows/e2e artifacts/
       - uses: actions/upload-artifact@v1
         with:
@@ -48,10 +44,9 @@ jobs:
     strategy:
       matrix:
         version: [14, 16, 18]
-        os: [ubuntu-latest, windows-latest, macos-latest]
 
     name: End-to-end test the package
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     needs: build-and-test
 
     steps:
@@ -62,7 +57,7 @@ jobs:
       - uses: actions/download-artifact@v1
         with:
           name: artifacts
-      - run: yarn add ./artifacts/datadog-ci-${{ matrix.os }}-${{ matrix.version }}.tgz
+      - run: yarn add ./artifacts/datadog-ci-${{ matrix.version }}.tgz
       - name: Run synthetics test
         run: yarn datadog-ci synthetics run-tests --config artifacts/e2e/global.config.json
         env:
