[dep] Upgrade to Yarn 3

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,15 @@ typings/
 # Output of 'npm pack'
 *.tgz
 
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # Yarn Integrity file
 .yarn-integrity
 
