--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "form-data": "3.0.0",
     "fuzzy": "^0.1.3",
     "glob": "7.1.4",
-    "inquirer": "8.2.0",
+    "inquirer": "^8.2.5",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "js-yaml": "3.13.1",
     "ora": "5.4.1",
