[ci] Update e2e keys, fail on synthetics test errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,13 +61,13 @@ jobs:
       - name: Run synthetics test
         run: yarn datadog-ci synthetics run-tests --config artifacts/e2e/global.config.json
         env:
-          DATADOG_API_KEY: ${{ secrets.datadog_api_key }}
-          DATADOG_APP_KEY: ${{ secrets.datadog_app_key }}
+          DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY_E2E }}
+          DATADOG_APP_KEY: ${{ secrets.DATADOG_APP_KEY_E2E }}
       - name: Run sourcemaps upload test
         run: yarn datadog-ci sourcemaps upload artifacts/e2e/sourcemaps/ --release-version=e2e --service=e2e-tests --minified-path-prefix=https://e2e-tests.datadoghq.com/static/
         env:
-          DATADOG_API_KEY: ${{ secrets.datadog_api_key }}
-          DATADOG_APP_KEY: ${{ secrets.datadog_app_key }}
+          DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY_E2E }}
+          DATADOG_APP_KEY: ${{ secrets.DATADOG_APP_KEY_E2E }}
 
   standalone-binary-test-ubuntu:
     name: Test standalone binary in ubuntu
