--- a/.github/workflows/e2e/global.config.json
+++ b/.github/workflows/e2e/global.config.json
@@ -1,6 +1,7 @@
 {
   "files": "{,!(node_modules)/**/}*.synthetics.json",
+  "failOnCriticalErrors": true,
+  "failOnMissingTests": true,
   "global": {},
   "timeout": 240000
 }
-
