--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@types/datadog-metrics": "0.6.1",
+    "ajv": "^8.12.0",
     "async-retry": "1.3.1",
     "aws-sdk": "^2.1012.0",
     "axios": "0.21.4",
