--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@types/datadog-metrics": "0.6.1",
     "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "async-retry": "1.3.1",
     "aws-sdk": "^2.1012.0",
     "axios": "0.21.4",
