--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "clipanion": "2.2.2",
     "datadog-metrics": "0.9.3",
     "deep-extend": "0.6.0",
-    "fast-xml-parser": "4.0.11",
+    "fast-xml-parser": "^4.1.2",
     "form-data": "3.0.0",
     "fuzzy": "^0.1.3",
     "glob": "7.1.4",
