--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,4 +146,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '14'
+      # The install step has been added here such that the `.yarn/install-state.gz` file is generated. This file is used
+      # by the script `check-licenses` below.
+      - run: yarn install --immutable
       - run: yarn check-licenses
