--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Run datadog actions from the CI.",
   "repository": "https://github.com/DataDog/datadog-ci",
   "license": "Apache-2.0",
-  "bin": "dist/cli.js",
+  "bin": {
+    "datadog-ci": "dist/cli.js"
+  },
   "engines": {
     "node": ">=14"
   },
