--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "inquirer-checkbox-plus-prompt": "^1.4.2",
     "js-yaml": "3.13.1",
     "ora": "5.4.1",
-    "protobufjs": "^7.2.2",
+    "protobufjs": "7.2.2",
     "proxy-agent": "5.0.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.7",
