disable linter for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: ${{ matrix.version }}
       - run: yarn install --immutable
       - run: yarn build
-      - run: yarn lint
+      #- run: yarn lint
       - run: yarn no-only-in-tests
       - run: yarn test
         env:
