--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@types/xml2js": "0.4.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "aws-sdk-mock": "^5.8.0",
     "dd-trace": "3.13.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
