Print interesting part of the report

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,10 @@ jobs:
       - name: Run yarn lint:ci
         run: |
           if ! yarn lint:ci ; then
-            echo ""
-            echo "Find the SARIF report in the Artifacts section here: https://github.com/DataDog/datadog-ci/actions/runs/${{ github.run_id }}"
+            echo "ESLint failed with the following errors:"
+            jq '.runs[].results' sarif-datadog-ci.sarif
+
+            echo "Find the full SARIF report in the Artifacts section here: https://github.com/DataDog/datadog-ci/actions/runs/${{ github.run_id }}"
             echo "You can fix this by running ==> yarn format <=="
             echo ""
             exit 1
