--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
             echo "ESLint failed with the following errors:"
             jq '.runs[].results' sarif-datadog-ci.sarif
 
+            echo ""
             echo "Find the full SARIF report in the Artifacts section here: https://github.com/DataDog/datadog-ci/actions/runs/${{ github.run_id }}"
             echo "You can fix this by running ==> yarn format <=="
             echo ""
