--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "4.0.0",
     "jest": "28.1.3",
+    "jest-junit": "^16.0.0",
     "jest-matcher-specific-error": "1.0.0",
     "pkg": "5.5.2",
     "prettier": "2.0.5",
