Update deprecated `files` property

--- a/.github/workflows/e2e/global.config.json
+++ b/.github/workflows/e2e/global.config.json
@@ -1,5 +1,5 @@
 {
-  "files": "{,!(node_modules)/**/}*.synthetics.json",
+  "files": ["{,!(node_modules)/**/}*.synthetics.json"],
   "failOnCriticalErrors": true,
   "failOnMissingTests": true,
   "global": {
