--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "scripts": {
+    "preinstall": "yarn prepack",
     "build": "yarn clean; tsc",
     "build:win": "tsc",
     "check-licenses": "node bin/check-licenses.js",
