[synthetics] Update README and example config files (#907)
* Update config files

* Update deprecated `files` property

* Format README

* Reorder alphabetically and rephrase a bit

* Rename test file

--- a/.github/workflows/e2e/global.config.json
+++ b/.github/workflows/e2e/global.config.json
@@ -1,7 +1,8 @@
 {
-  "files": "{,!(node_modules)/**/}*.synthetics.json",
+  "files": ["{,!(node_modules)/**/}*.synthetics.json"],
   "failOnCriticalErrors": true,
   "failOnMissingTests": true,
-  "global": {},
-  "timeout": 240000
+  "global": {
+    "pollingTimeout": 240000
+  }
 }
