Add `cloud-run flare` command, flag validation, and refactor renderers

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "test": "jest --colors",
     "test:debug": "node --inspect-brk node_modules/jest/bin/jest --runInBand",
     "test:lambda": "jest src/commands/lambda --colors",
+    "test:cloud-run": "jest src/commands/cloud-run --colors",
     "eslint": "eslint --quiet 'src/**/*.ts'",
     "typecheck": "bash bin/typecheck.sh",
     "watch": "tsc -w"
