[dep] Bump `tiny-async-pool` to `2.1.0`

--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "ssh2-streams": "0.4.10",
     "sshpk": "1.16.1",
     "terminal-link": "2.1.1",
-    "tiny-async-pool": "1.2.0",
+    "tiny-async-pool": "^2.1.0",
     "typanion": "^3.14.0",
     "uuid": "^9.0.0",
     "ws": "7.4.6",
@@ -131,7 +131,7 @@
     "@types/ssh2": "1.11.6",
     "@types/ssh2-streams": "0.1.9",
     "@types/sshpk": "1.10.5",
-    "@types/tiny-async-pool": "1.0.0",
+    "@types/tiny-async-pool": "^2.0.3",
     "@types/uuid": "^9.0.2",
     "@types/ws": "7.2.9",
     "@types/xml2js": "0.4.9",
